--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                   <a href="https://arxiv.org/pdf/2309.14704">arXiv</a>
                   <p></p>
                   <p>
-                    Frozen transformers from language models, though trained solely on textual data, can effectively
-                    improves diverse visual tasks by directly encoding visual tokens.
+                    Propose a tile classification based viewport prediction method with Multi-modal Fusion Transformer
+                    to improve the robustness of viewport prediction.
                   </p>
                 </td>
               </tr>
