--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a href="https://scholar.google.com/citations?user=4bCjIH0AAAAJ\&hl=zh-CN">Google Scholar</a>
                     &nbsp/&nbsp
                     <a href="https://x.com/ZhihaoZ75030773">Twitter (X)</a> &nbsp/&nbsp
-                    <a href="https://alanzhangcs.github.io">Github</a> &nbsp/&nbsp
+                    <a href="https://github.com/alanzhangcs">Github</a> &nbsp/&nbsp
                     <!-- <a href="https://www.zhihu.com/people/pang-zi-qi-40">知乎</a> -->
                   </p>
                 </td>
