--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <title>Zhihao Zhang</title>
 
-  <meta name="author" content="Ziqi Pang">
+  <meta name="author" content="Zhihao Zhang">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -85,7 +85,7 @@
 
               <tr onmouseout="tamm_stop()" onmouseover="tamm_start()">
                 <td style="padding:20px;width:25%;vertical-align:top">
-                  <div class="two" id='tamm_image'><img src="images/tamm.png" style="width:120%;height:auto"></div>
+                  <div class="two" id='tamm_image'><img src="images/tamm.png" style="width:100%;height:auto"></div>
                 </td>
                 <td style="padding:30px;width:75%;vertical-align:middle">
                   <papertitle>TAMM: TriAdapter Multi-Modal Learning for 3D Shape Understanding
@@ -112,7 +112,7 @@
 
               <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
                 <td style="padding:20px;width:25%;vertical-align:top">
-                  <div class="two" id='lidarsot_image'><img src="images/mftr.png" style="width:120%;height:auto">
+                  <div class="two" id='lidarsot_image'><img src="images/mftr.png" style="width:100%;height:auto">
                   </div>
                 </td>
                 <td style="padding:30px;width:75%;vertical-align:middle">
