--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
 
-              <tr onmouseout="tamm_stop()" onmouseover="tamm_start()">
+              <tr onmouseout="rmem_stop()" onmouseover="rmem_start()">
                 <td style="padding:20px;width:25%;vertical-align:top">
-                  <div class="two" id='tamm_image'><img src="images/tamm.png" style="width:125%;height:auto"></div>
+                  <div class="two" id='tamm_image'><img src="images/tamm.png" style="width:100%;height:auto"></div>
                 </td>
                 <td style="padding:30px;width:75%;vertical-align:middle">
                   <papertitle>TAMM: TriAdapter Multi-Modal Learning for 3D Shape Understanding
@@ -106,6 +106,32 @@
                     Introduce TriAdapter Multi-Modal Learning (TAMM), a novel
                     two-stage learning approach based on three synergistic
                     adapters to different modalities in the pre-training.
+                  </p>
+                </td>
+              </tr>
+
+              <tr onmouseout="rmem_stop()" onmouseover="rmem_start()">
+                <td style="padding:20px;width:25%;vertical-align:top">
+                  <div class="two" id='rmem_image'><img src="images/tamm.png" style="width:100%;height:auto"></div>
+                </td>
+                <td style="padding:30px;width:75%;vertical-align:middle">
+                  <papertitle>Restricted Memory Banks Improve Video Object Segmentation: A Revisit (Alias: RMem)
+                  </papertitle>
+                  <br>
+                  <a href="https://scholar.google.com/citations?user=FxvLU4sAAAAJ&hl=en">Junbao Zhou</a>*,
+                  <strong>Ziqi Pang</strong>*,
+                  <a href="https://yxw.web.illinois.edu/">Yu-Xiong Wang</a>
+                  <br>
+                  <em> CVPR </em>, 2024
+                  <br>
+                  <a href="https://restricted-memory.github.io/">Project Page</a>
+                  /
+                  <a href="https://github.com/Restricted-Memory/RMem">Code</a>
+                  /
+                  <a href="https://arxiv.org/abs/2406.08476">arXiv</a>
+                  <p>
+                    Simply bounding the size of memory banks improves VOS on challenging state-changes and long videos,
+                    indicating the importance of selecting relevant information from long contexts.
                   </p>
                 </td>
               </tr>
