--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 
               <tr onmouseout="rmem_stop()" onmouseover="rmem_start()">
                 <td style="padding:20px;width:25%;vertical-align:top">
-                  <div class="two" id='tamm_image'><img src="images/tamm.png" style="width:100%;height:auto"></div>
+                  <div class="two" id='tamm_image'><img src="images/tamm.png"
+                      style="width:100%;height:auto;float:left;margin:right 20px;"></div>
                 </td>
                 <td style="padding:30px;width:75%;vertical-align:middle">
                   <papertitle>TAMM: TriAdapter Multi-Modal Learning for 3D Shape Understanding
@@ -137,19 +138,6 @@
                   </p>
                 </td>
               </tr>
-
-              <style>
-                img {
-                  float: left;
-                  /* 图片浮动到左侧 */
-                  margin-right: 20px;
-                  /* 图片和文字之间留一些间距 */
-                  width: 100px;
-                  /* 设置图片宽度 */
-                  height: auto;
-                  /* 保持图片比例 */
-                }
-              </style>
 
 
             </tbody>
