--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Zhihao Zhang</title>
+
+  <title>Zhihao Zhang (张志浩)'s Homepage</title>
+  <meta name="keywords"
+    content="Zhihao Zhang,张志浩,homepage,主页,computer vision,XJTU,Xi'an Jiaotong University,MSU,Michigan State University,representation learning,3D object detection, multi-modal learning">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
   <meta name="author" content="Zhihao Zhang">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link rel="icon"
-    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>">
+  <!-- <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>"> -->
 </head>
 
 <body>
@@ -79,85 +84,96 @@
               </tr>
             </tbody>
           </table>
+
+          <table
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:20px;width:100%;vertical-align:middle">
+                  <heading>Publications</heading>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
           <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
 
-              <tr onmouseout="rmem_stop()" onmouseover="rmem_start()">
-                <td style="padding:20px;width:30%;vertical-align:top">
-                  <div class="two" id='tamm_image'><img src="images/tamm.png"
-                      style="width:150%;height:auto;float:left;margin:right 20px;"></div>
-                </td>
-                <td style="padding:30px;width:70%;vertical-align:middle">
-                  <papertitle>TAMM: TriAdapter Multi-Modal Learning for 3D Shape Understanding
-                  </papertitle>
-                  <br>
-                  <strong>Zhihao Zhang</strong>*,
-                  <a href="https://shengcao-cao.github.io/">Shengcao Cao*</a>
-                  <a href="https://yxw.web.illinois.edu/">Yu-Xiong Wang</a>
-                  <br>
-                  <em> CVPR </em>, 2024
-                  <br>
-                  <a href="https://alanzhangcs.github.io/tamm-page/">Project Page</a>
-                  /
-                  <a href="https://github.com/alanzhangcs/Tamm_Code">Code</a>
-                  /
-                  <a href="https://arxiv.org/pdf/2402.18490">arXiv</a>
-                  <p>
-                    Introduce TriAdapter Multi-Modal Learning (TAMM), a novel
-                    two-stage learning approach based on three synergistic
-                    adapters to different modalities in the pre-training.
-                  </p>
-                </td>
-              </tr>
+              <tr></tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one"><img src="images/tamm.png"
+                    style="width:150%;max-width:150%; position: absolute;top: -5%">
+                </div>
+              </td>
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <papertitle>TAMM: TriAdapter Multi-Modal Learning for 3D Shape Understanding
+                </papertitle>
+                <br>
+                <strong>Zhihao Zhang</strong>*,
+                <a href="https://shengcao-cao.github.io/">Shengcao Cao*</a>
+                <a href="https://yxw.web.illinois.edu/">Yu-Xiong Wang</a>
+                <br>
+                <em> CVPR </em>, 2024
+                <br>
+                <a href="https://alanzhangcs.github.io/tamm-page/">Project Page</a>
+                /
+                <a href="https://github.com/alanzhangcs/Tamm_Code">Code</a>
+                /
+                <a href="https://arxiv.org/pdf/2402.18490">arXiv</a>
+                <p>
+                  Introduce TriAdapter Multi-Modal Learning (TAMM), a novel
+                  two-stage learning approach based on three synergistic
+                  adapters to different modalities in the pre-training.
+                </p>
+              </td>
+
+      </tr>
 
 
-              <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
-                <td style="padding:20px;width:30%;vertical-align:top">
-                  <div class="two" id='lidarsot_image'><img src="images/mftr.png" style="width:150%;height:auto">
-                  </div>
-                </td>
-                <td style="padding:30px;width:70%;vertical-align:middle">
-                  <papertitle>Tile Classification Based Viewport Prediction with Multi-modal Fusion Transformer
-                  </papertitle>
-                  <br>
-                  <strong>Zhihao Zhang</strong>*,
-                  <a href="https://scholar.google.com/citations?user=wmYVogQAAAAJ&hl=en">Yiwei Chen</a>*,
-                  <a href="https://gr.xjtu.edu.cn/web/zhangwzh123">Weizhan Zhang</a>,
-                  Caixia Yan, Qinghua Zheng, Qi Wang, Wangdu Chen
-                  <br>
-                  <em> ACM MM </em>, 2023
-                  <br>
-                  <a href="https://github.com/alanzhangcs/MFTR">Code</a>
-                  /
-                  <a href="https://arxiv.org/pdf/2309.14704">arXiv</a>
-                  <p></p>
-                  <p>
-                    Propose a tile classification based viewport prediction method with Multi-modal Fusion Transformer
-                    to improve the robustness of viewport prediction.
-                  </p>
-                </td>
-              </tr>
-
-
-            </tbody>
-          </table>
-
-
-          <table
-            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;padding:40px">
-            <tbody>
-              <tr>
-                <td style="padding:0px">
-                  <br>
-                  <p style="text-align:center;font-size:small;">
-                    Huge thanks to Jon Barron for proving the template for the page.
-                  </p>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+      <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
+        <td style="padding:20px;width:30%;vertical-align:middle">
+          <div class="one"><img src="images/mftr.png" style="width:150%;height:auto">
+          </div>
         </td>
+        <td style="padding:30px;width:70%;vertical-align:middle">
+          <papertitle>Tile Classification Based Viewport Prediction with Multi-modal Fusion Transformer
+          </papertitle>
+          <br>
+          <strong>Zhihao Zhang</strong>*,
+          <a href="https://scholar.google.com/citations?user=wmYVogQAAAAJ&hl=en">Yiwei Chen</a>*,
+          <a href="https://gr.xjtu.edu.cn/web/zhangwzh123">Weizhan Zhang</a>,
+          Caixia Yan, Qinghua Zheng, Qi Wang, Wangdu Chen
+          <br>
+          <em> ACM MM </em>, 2023
+          <br>
+          <a href="https://github.com/alanzhangcs/MFTR">Code</a>
+          /
+          <a href="https://arxiv.org/pdf/2309.14704">arXiv</a>
+          <p></p>
+          <p>
+            Propose a tile classification based viewport prediction method with Multi-modal Fusion Transformer
+            to improve the robustness of viewport prediction.
+          </p>
+        </td>
+      </tr>
+
+      <tr></tr>
+      <td>
+        <em>(* means equal contribution)</em>
+      </td>
+      </tr>
+
+      <tr></tr>
+      <td style="padding:20px;width:0%;vertical-align:middle">
+      </td>
+      <td style="padding:20px;width:100%;vertical-align:middle">
+        <hr style="margin-top:0px">
+        <p>The website template was adapted from <a href="https://dorniwang.github.io">Duomin Wang</a>.</p>
+      </td>
+      </tr>
+
+      </td>
       </tr>
   </table>
 </body>
