--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       </td>
       <td style="padding:20px;width:100%;vertical-align:middle">
         <hr style="margin-top:0px">
-        <p>The website template was adapted from <a href="https://dorniwang.github.io">Duomin Wang</a>.</p>
+        <p>The website template was adapted from <a href="https://ziqipang.github.io/">Ziqi Pang</a>.</p>
       </td>
       </tr>
 
