--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   <p style="text-align:center">
                     <a href="mailto:zhan2365@msu.edu">Email</a> &nbsp/&nbsp
                     <a href="./files/cv_formal.pdf">CV</a> &nbsp/&nbsp
-                    <a href="https://scholar.google.com/citations?user=4bCjIH0AAAAJ\&hl=zh-CN">Google Scholar</a>
+                    <a href="https://scholar.google.com/citations?user=4bCjIH0AAAAJ&hl=zh-CN">Google Scholar</a>
                     &nbsp/&nbsp
                     <a href="https://x.com/ZhihaoZ75030773">Twitter (X)</a> &nbsp/&nbsp
                     <a href="https://github.com/alanzhangcs">Github</a> &nbsp/&nbsp
