--- a/index.html
+++ b/index.html
@@ -100,6 +100,35 @@
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
 
+              <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one"><img src="images/charm3r.png" style="width:120%;height:auto">
+                  </div>
+                </td>
+                <td style="padding:30px;width:75%;vertical-align:middle">
+                  <papertitle>CHARM3R: Towards Unseen Camera Height Robust Monocular 3D Detector
+                  </papertitle>
+                  <br>
+                  <a href="https://scholar.google.com/citations?user=wmYVogQAAAAJ&hl=en">Abhinav Kumar</a>*,
+                  <a href="https://yuliangguo.github.io/">Yuliang Guo</a>,
+                  <strong>Zhihao Zhang</strong>,
+                  <a href="https://scholar.google.com/citations?user=cL4bNBwAAAAJ&hl=zh-CN">Xinyu Huang</a>, <a
+                    href="https://www.liu-ren.com/">Liu Ren</a>, <a
+                    href="https://www.cse.msu.edu/~liuxm/index2.html">Xiaoming Liu</a>,
+                  <br>
+                  <em> ICCV </em>, 2025
+                  <br>
+                  <a href="https://github.com/abhi1kumar/CHARM3R">Project Page</a>
+
+                  <!-- <a href="https://arxiv.org/pdf/2309.14704">arXiv</a> -->
+                  <p></p>
+                  <p>
+                    Highlights the understudied problem of Mono3D generalization to unseen ego heights.
+                  </p>
+                </td>
+              </tr>
+
+
               <tr></tr>
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one"><img src="images/tamm.png"
@@ -111,7 +140,7 @@
                 </papertitle>
                 <br>
                 <strong>Zhihao Zhang</strong>*,
-                <a href="https://shengcao-cao.github.io/">Shengcao Cao*</a>
+                <a href="https://shengcao-cao.github.io/">Shengcao Cao*</a>,
                 <a href="https://yxw.web.illinois.edu/">Yu-Xiong Wang</a>
                 <br>
                 <em> CVPR </em>, 2024
@@ -129,6 +158,9 @@
               </td>
 
       </tr>
+
+
+
 
 
       <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
@@ -164,18 +196,16 @@
       </td>
       </tr>
 
-      <tr></tr>
-      <td style="padding:20px;width:0%;vertical-align:middle">
-      </td>
-      <td style="padding:20px;width:100%;vertical-align:middle">
-        <hr style="margin-top:0px">
-        <p>The website template was adapted from <a href="https://ziqipang.github.io/">Ziqi Pang</a>.</p>
-      </td>
-      </tr>
-
-      </td>
-      </tr>
   </table>
+
+  <!-- Visitor Map Footer -->
+  <div style="text-align:center; padding:25px; margin-top:20px;">
+    <!-- ClustrMaps 3D Globe -->
+    <div style="width:25%; max-width:200px; margin:0 auto;">
+      <script type="text/javascript" id="clstr_globe"
+        src="//clustrmaps.com/globe.js?d=z_wxwAyFulaFAOwaW8JcfG16DCJs0uOOWJVxlivWfu4"></script>
+    </div>
+  </div>
 </body>
 
 </html>
