--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                   </p>
                 </td>
                 <td style="padding:2.5%;width:40%;max-width:40%">
-                  <a href="images/zhihaozhang.png"><img style="width:100%;max-width:100%" alt="profile photo"
-                      src="images/zhihaozhang.png" class="hoverZoomLink"></a>
+                  <a href="images/zhihaozhang1.png"><img style="width:100%;max-width:100%" alt="profile photo"
+                      src="images/zhihaozhang1.png" class="hoverZoomLink"></a>
                 </td>
               </tr>
             </tbody>
