--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <papertitle>CHARM3R: Towards Unseen Camera Height Robust Monocular 3D Detector
                   </papertitle>
                   <br>
-                  <a href="https://scholar.google.com/citations?user=wmYVogQAAAAJ&hl=en">Abhinav Kumar</a>*,
+                  <a href="https://sites.google.com/view/abhinavkumar">Abhinav Kumar</a>,
                   <a href="https://yuliangguo.github.io/">Yuliang Guo</a>,
                   <strong>Zhihao Zhang</strong>,
                   <a href="https://scholar.google.com/citations?user=cL4bNBwAAAAJ&hl=zh-CN">Xinyu Huang</a>, <a
@@ -173,7 +173,7 @@
           </papertitle>
           <br>
           <strong>Zhihao Zhang</strong>*,
-          <a href="https://scholar.google.com/citations?user=wmYVogQAAAAJ&hl=en">Yiwei Chen</a>*,
+          <a href="https://yiwei-chenn.github.io/">Yiwei Chen</a>*,
           <a href="https://gr.xjtu.edu.cn/web/zhangwzh123">Weizhan Zhang</a>,
           Caixia Yan, Qinghua Zheng, Qi Wang, Wangdu Chen
           <br>
