--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                   <strong>Zhihao Zhang</strong>,
                   <a href="https://scholar.google.com/citations?user=cL4bNBwAAAAJ&hl=zh-CN">Xinyu Huang</a>, <a
                     href="https://www.liu-ren.com/">Liu Ren</a>, <a
-                    href="https://www.cse.msu.edu/~liuxm/index2.html">Xiaoming Liu</a>,
+                    href="https://www.cse.msu.edu/~liuxm/index2.html">Xiaoming Liu</a>
                   <br>
                   <em> ICCV </em>, 2025
                   <br>
