--- a/index.html
+++ b/index.html
@@ -119,7 +119,10 @@
                   <em> ICCV </em>, 2025
                   <br>
                   <a href="https://github.com/abhi1kumar/CHARM3R">Project Page</a>
-
+                  /
+                  <a href="https://github.com/abhi1kumar/CHARM3R">Code</a>
+                  /
+                  <a href="https://arxiv.org/abs/2508.11185">arXiv</a>
                   <!-- <a href="https://arxiv.org/pdf/2309.14704">arXiv</a> -->
                   <p></p>
                   <p>
