--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                   <ul>
                     <li>3D shape understanding, 3D object detection for autonomous driving </li>
                     <li>Multi-modal learning for 3D perception</li>
+                    <li>Spatial intelligence</li>
                   </ul>
                   </p>
                 </td>
