--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                   <p style="text-align:center">
                     <name>Zhihao Zhang (张志浩)</name>
                   </p>
-                  <p> I am a first-year CS Ph.D. student focusing on 3D computer vision at <a
+                  <p> I am a second-year CS Ph.D. student focusing on 3D computer vision at <a
                       href="https://engineering.msu.edu/about/departments/cse">Michigan State University</a> (MSU),
                     where my advisor is Prof. <a href="https://www.cse.msu.edu/~liuxm/index2.html">Xiaoming Liu</a>.
                     Before that, I graduated from <a href="http://en.xjtu.edu.cn/">Xi’an Jiaotong University</a>
