--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
                       href="https://engineering.msu.edu/about/departments/cse">Michigan State University</a> (MSU),
                     where my advisor is Prof. <a href="https://www.cse.msu.edu/~liuxm/index2.html">Xiaoming Liu</a>.
                     Before that, I graduated from <a href="http://en.xjtu.edu.cn/">Xi’an Jiaotong University</a>
-                    (XJTU) with a Bachelor & Master degree in Computer Science, advised by <a
-                      href="https://gr.xjtu.edu.cn/web/zhangwzh123">Weizhan Zhang</a>.
+                    (XJTU) with a Bachelor & Master degree in Computer Science.
                   </p>
                   <p>
                     Prior to joining MSU, I interned at <a
