--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                     (XJTU) with a Bachelor & Master degree in Computer Science.
                   </p>
                   <p>
-                    Prior to joining MSU, I interned at <a
-                      href="https://www.tri.global/our-work/machine-learning">University of Illinois
+                    Prior to joining MSU, I interned at <a href="https://illinois.edu/">University of Illinois
                       Urabana-Champaign</a> (UIUC) with Prof. <a href="https://yxw.web.illinois.edu/">Yu-Xiong Wang</a>.
                   </p>
                   <p style="text-align:center">
