--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                       href="https://engineering.msu.edu/about/departments/cse">Michigan State University</a> (MSU),
                     where my advisor is Prof. <a href="https://www.cse.msu.edu/~liuxm/index2.html">Xiaoming Liu</a>.
                     Before that, I graduated from <a href="http://en.xjtu.edu.cn/">Xi’an Jiaotong University</a>
-                    (XJTU) with a Bachelor & Master degree in Computer Science.
+                    (XJTU) with a Bachelor & Master degree in Computer Science, advised by Prof. <a
+                      href="https://gr.xjtu.edu.cn/web/zhangwzh123">Weizhan Zhang</a>.
                   </p>
                   <p>
                     Prior to joining MSU, I interned at <a href="https://illinois.edu/">University of Illinois
