--- a/index.html
+++ b/index.html
@@ -96,10 +96,35 @@
             </tbody>
           </table>
 
+
+
           <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
 
+              <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one"><img src="images/monocop.png" style="width:120%;height:auto">
+                  </div>
+                </td>
+                <td style="padding:30px;width:75%;vertical-align:middle">
+                  <papertitle>Unleashing the Power of Chain-of-Prediction for Monocular 3D Object Detection
+                  </papertitle>
+                  <br>
+                  <strong>Zhihao Zhang</strong>,
+                  <a href="https://sites.google.com/view/abhinavkumar">Abhinav Kumar</a>,
+                  <a href="https://girish1511.github.io/">Girish Chandar Ganesan</a>,
+                  <a href="https://www.cse.msu.edu/~liuxm/index2.html">Xiaoming Liu</a>
+                  <br>
+                  <em> CVPR </em>, 2026
+                  <br>
+                  <a href="https://github.com/abhi1kumar/CHARM3R">Project Page</a>
+                  /
+                  <a href="https://github.com/abhi1kumar/CHARM3R">Code</a>
+                  /
+                  <a href="https://arxiv.org/abs/2508.11185">arXiv</a>
+                </td>
+              </tr>
               <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one"><img src="images/charm3r.png" style="width:120%;height:auto">
@@ -123,11 +148,7 @@
                   <a href="https://github.com/abhi1kumar/CHARM3R">Code</a>
                   /
                   <a href="https://arxiv.org/abs/2508.11185">arXiv</a>
-                  <!-- <a href="https://arxiv.org/pdf/2309.14704">arXiv</a> -->
-                  <p></p>
-                  <p>
-                    Highlights the understudied problem of Mono3D generalization to unseen ego heights.
-                  </p>
+
                 </td>
               </tr>
 
@@ -153,11 +174,6 @@
                 <a href="https://github.com/alanzhangcs/Tamm_Code">Code</a>
                 /
                 <a href="https://arxiv.org/pdf/2402.18490">arXiv</a>
-                <p>
-                  Introduce TriAdapter Multi-Modal Learning (TAMM), a novel
-                  two-stage learning approach based on three synergistic
-                  adapters to different modalities in the pre-training.
-                </p>
               </td>
 
       </tr>
@@ -185,11 +201,7 @@
           <a href="https://github.com/alanzhangcs/MFTR">Code</a>
           /
           <a href="https://arxiv.org/pdf/2309.14704">arXiv</a>
-          <p></p>
-          <p>
-            Propose a tile classification based viewport prediction method with Multi-modal Fusion Transformer
-            to improve the robustness of viewport prediction.
-          </p>
+
         </td>
       </tr>
 
