--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <!-- <link rel="icon"
-    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>"> -->
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎓</text></svg>">
 </head>
 
 <body>
@@ -62,19 +62,20 @@
             </tbody>
           </table>
 
+          <!-- Research Section -->
           <table
-            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top:20px;">
             <tbody>
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
                   <heading>Research</heading>
-                  <p>
+                  <p style="margin-top:16px;">
                     My research interests lie at the intersection of <strong>multi-modal learning</strong> and
                     <strong>computer vision</strong> with the long-term goal of empowering computational models to
                     better perceive and interact
                     with the 3D visual world.
                     Currently, I'm working on:
-                  <ul>
+                  <ul style="margin-top:12px;">
                     <li>3D shape understanding, 3D object detection for autonomous driving </li>
                     <li>Multi-modal learning for 3D perception</li>
                     <li>Spatial intelligence</li>
@@ -85,8 +86,9 @@
             </tbody>
           </table>
 
+          <!-- Publications Section -->
           <table
-            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top:30px;">
             <tbody>
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
@@ -107,7 +109,7 @@
                   <div class="one"><img src="images/monocop.png" style="width:120%;height:auto">
                   </div>
                 </td>
-                <td style="padding:30px;width:75%;vertical-align:middle">
+                <td style="padding:20px;width:75%;vertical-align:middle">
                   <papertitle>Unleashing the Power of Chain-of-Prediction for Monocular 3D Object Detection
                   </papertitle>
                   <br>
@@ -118,11 +120,11 @@
                   <br>
                   <em> CVPR </em>, 2026
                   <br>
-                  <a href="https://github.com/abhi1kumar/CHARM3R">Project Page</a>
+                  <a href="https://github.com/alanzhangcs/MonoCoP">Project Page</a>
                   /
-                  <a href="https://github.com/abhi1kumar/CHARM3R">Code</a>
+                  <a href="https://github.com/alanzhangcs/MonoCoP">Code</a>
                   /
-                  <a href="https://arxiv.org/abs/2508.11185">arXiv</a>
+                  <a href="https://github.com/alanzhangcs/MonoCoP">Paper</a>
                 </td>
               </tr>
               <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
@@ -130,7 +132,7 @@
                   <div class="one"><img src="images/charm3r.png" style="width:120%;height:auto">
                   </div>
                 </td>
-                <td style="padding:30px;width:75%;vertical-align:middle">
+                <td style="padding:20px;width:75%;vertical-align:middle">
                   <papertitle>CHARM3R: Towards Unseen Camera Height Robust Monocular 3D Detector
                   </papertitle>
                   <br>
@@ -147,71 +149,69 @@
                   /
                   <a href="https://github.com/abhi1kumar/CHARM3R">Code</a>
                   /
-                  <a href="https://arxiv.org/abs/2508.11185">arXiv</a>
+                  <a href="https://arxiv.org/abs/2508.11185">Paper</a>
 
                 </td>
               </tr>
 
 
-              <tr></tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <div class="one"><img src="images/tamm.png"
-                    style="width:120%;max-width:120%; position: absolute;top: -5%">
-                </div>
-              </td>
-              <td style="padding:20px;width:75%;vertical-align:middle">
-                <papertitle>TAMM: TriAdapter Multi-Modal Learning for 3D Shape Understanding
-                </papertitle>
-                <br>
-                <strong>Zhihao Zhang</strong>*,
-                <a href="https://shengcao-cao.github.io/">Shengcao Cao*</a>,
-                <a href="https://yxw.web.illinois.edu/">Yu-Xiong Wang</a>
-                <br>
-                <em> CVPR </em>, 2024
-                <br>
-                <a href="https://alanzhangcs.github.io/tamm-page/">Project Page</a>
-                /
-                <a href="https://github.com/alanzhangcs/Tamm_Code">Code</a>
-                /
-                <a href="https://arxiv.org/pdf/2402.18490">arXiv</a>
-              </td>
-
-      </tr>
+              <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one"><img src="images/tamm.png" style="width:120%;height:auto">
+                  </div>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <papertitle>TAMM: TriAdapter Multi-Modal Learning for 3D Shape Understanding
+                  </papertitle>
+                  <br>
+                  <strong>Zhihao Zhang</strong>*,
+                  <a href="https://shengcao-cao.github.io/">Shengcao Cao*</a>,
+                  <a href="https://yxw.web.illinois.edu/">Yu-Xiong Wang</a>
+                  <br>
+                  <em> CVPR </em>, 2024
+                  <br>
+                  <a href="https://alanzhangcs.github.io/tamm-page/">Project Page</a>
+                  /
+                  <a href="https://github.com/alanzhangcs/Tamm_Code">Code</a>
+                  /
+                  <a href="https://arxiv.org/pdf/2402.18490">Paper</a>
+                </td>
+              </tr>
 
 
 
 
 
-      <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
-        <td style="padding:20px;width:25%;vertical-align:middle">
-          <div class="one"><img src="images/mftr.png" style="width:120%;height:auto">
-          </div>
-        </td>
-        <td style="padding:30px;width:75%;vertical-align:middle">
-          <papertitle>Tile Classification Based Viewport Prediction with Multi-modal Fusion Transformer
-          </papertitle>
-          <br>
-          <strong>Zhihao Zhang</strong>*,
-          <a href="https://yiwei-chenn.github.io/">Yiwei Chen</a>*,
-          <a href="https://gr.xjtu.edu.cn/web/zhangwzh123">Weizhan Zhang</a>,
-          Caixia Yan, Qinghua Zheng, Qi Wang, Wangdu Chen
-          <br>
-          <em> ACM MM </em>, 2023
-          <br>
-          <a href="https://github.com/alanzhangcs/MFTR">Code</a>
-          /
-          <a href="https://arxiv.org/pdf/2309.14704">arXiv</a>
+              <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one"><img src="images/mftr.png" style="width:120%;height:auto">
+                  </div>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <papertitle>Tile Classification Based Viewport Prediction with Multi-modal Fusion Transformer
+                  </papertitle>
+                  <br>
+                  <strong>Zhihao Zhang</strong>*,
+                  <a href="https://yiwei-chenn.github.io/">Yiwei Chen</a>*,
+                  <a href="https://gr.xjtu.edu.cn/web/zhangwzh123">Weizhan Zhang</a>,
+                  Caixia Yan, Qinghua Zheng, Qi Wang, Wangdu Chen
+                  <br>
+                  <em> ACM MM </em>, 2023
+                  <br>
+                  <a href="https://github.com/alanzhangcs/MFTR">Code</a>
+                  /
+                  <a href="https://arxiv.org/pdf/2309.14704">Paper</a>
+                </td>
+              </tr>
 
-        </td>
-      </tr>
+              <tr>
+                <td>
+                  <em>(* means equal contribution)</em>
+                </td>
+              </tr>
 
-      <tr></tr>
-      <td>
-        <em>(* means equal contribution)</em>
-      </td>
-      </tr>
-
-  </table>
+            </tbody>
+          </table>
 
   <!-- Visitor Map Footer -->
   <div style="text-align:center; padding:25px; margin-top:20px;">
