--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <a href="https://scholar.google.com/citations?user=4bCjIH0AAAAJ&hl=zh-CN">Google Scholar</a>
                     &nbsp/&nbsp
                     <a href="https://x.com/ZhihaoZ75030773">Twitter (X)</a> &nbsp/&nbsp
-                    <a href="https://github.com/alanzhangcs">Github</a> &nbsp/&nbsp
+                    <a href="https://github.com/alanzhangcs">Github</a>
                     <!-- <a href="https://www.zhihu.com/people/pang-zi-qi-40">知乎</a> -->
                   </p>
                 </td>
@@ -118,7 +118,7 @@
                   <a href="https://girish1511.github.io/">Girish Chandar Ganesan</a>,
                   <a href="https://www.cse.msu.edu/~liuxm/index2.html">Xiaoming Liu</a>
                   <br>
-                  <em> CVPR </em>, 2026
+                  <em> CVPR 2026</em>
                   <br>
                   <a href="https://github.com/alanzhangcs/MonoCoP">Project Page</a>
                   /
@@ -143,7 +143,7 @@
                     href="https://www.liu-ren.com/">Liu Ren</a>, <a
                     href="https://www.cse.msu.edu/~liuxm/index2.html">Xiaoming Liu</a>
                   <br>
-                  <em> ICCV </em>, 2025
+                  <em> ICCV 2025</em>
                   <br>
                   <a href="https://github.com/abhi1kumar/CHARM3R">Project Page</a>
                   /
@@ -168,7 +168,7 @@
                   <a href="https://shengcao-cao.github.io/">Shengcao Cao*</a>,
                   <a href="https://yxw.web.illinois.edu/">Yu-Xiong Wang</a>
                   <br>
-                  <em> CVPR </em>, 2024
+                  <em> CVPR 2024</em>
                   <br>
                   <a href="https://alanzhangcs.github.io/tamm-page/">Project Page</a>
                   /
@@ -213,14 +213,14 @@
             </tbody>
           </table>
 
-  <!-- Visitor Map Footer -->
-  <div style="text-align:center; padding:25px; margin-top:20px;">
-    <!-- ClustrMaps 3D Globe -->
-    <div style="width:25%; max-width:200px; margin:0 auto;">
-      <script type="text/javascript" id="clstr_globe"
-        src="//clustrmaps.com/globe.js?d=z_wxwAyFulaFAOwaW8JcfG16DCJs0uOOWJVxlivWfu4"></script>
-    </div>
-  </div>
+          <!-- Visitor Map Footer -->
+          <div style="text-align:center; padding:25px; margin-top:20px;">
+            <!-- ClustrMaps 3D Globe -->
+            <div style="width:25%; max-width:200px; margin:0 auto;">
+              <script type="text/javascript" id="clstr_globe"
+                src="//clustrmaps.com/globe.js?d=z_wxwAyFulaFAOwaW8JcfG16DCJs0uOOWJVxlivWfu4"></script>
+            </div>
+          </div>
 </body>
 
 </html>
