--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
           <!-- Visitor Map Footer -->
           <div style="text-align:center; padding:25px; margin-top:20px;">
             <!-- ClustrMaps 3D Globe -->
-            <div style="width:25%; max-width:200px; margin:0 auto;">
+            <div style="width:50%; max-width:300px; margin:0 auto; min-height: 200px;">
               <script type="text/javascript" id="clstr_globe"
-                src="//clustrmaps.com/globe.js?d=z_wxwAyFulaFAOwaW8JcfG16DCJs0uOOWJVxlivWfu4"></script>
+                src="https://clustrmaps.com/globe.js?d=z_wxwAyFulaFAOwaW8JcfG16DCJs0uOOWJVxlivWfu4"></script>
             </div>
           </div>
 </body>
