--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                   <a href="https://gr.xjtu.edu.cn/web/zhangwzh123">Weizhan Zhang</a>,
                   Caixia Yan, Qinghua Zheng, Qi Wang, Wangdu Chen
                   <br>
-                  <em> ACM MM </em>, 2023
+                  <em> ACM MM 2023</em>
                   <br>
                   <a href="https://github.com/alanzhangcs/MFTR">Code</a>
                   /
@@ -205,22 +205,26 @@
               </tr>
 
               <tr>
-                <td>
-                  <em>(* means equal contribution)</em>
+                <td colspan="2" style="padding:20px; text-align:center;">
+                  <span style="color:#64748b; font-size:15px; font-style:italic;">(* means equal contribution)</span>
                 </td>
               </tr>
 
             </tbody>
           </table>
 
-          <!-- Visitor Map Footer -->
+          <!-- Visitor Map Footer (commented out)
           <div style="text-align:center; padding:25px; margin-top:20px;">
-            <!-- ClustrMaps 3D Globe -->
             <div style="width:50%; max-width:300px; margin:0 auto; min-height: 200px;">
               <script type="text/javascript" id="clstr_globe"
                 src="https://clustrmaps.com/globe.js?d=z_wxwAyFulaFAOwaW8JcfG16DCJs0uOOWJVxlivWfu4"></script>
             </div>
           </div>
+          -->
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </body>
 
 </html>
