--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
-                  <heading>Publications</heading>
+                  <heading>Selected Publications</heading>
                 </td>
               </tr>
             </tbody>
@@ -103,13 +103,34 @@
           <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
-
               <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
-                <td style="padding:20px;width:25%;vertical-align:middle">
+                <td style="padding:20px;width:30%;vertical-align:middle">
+                  <div class="one"><img src="images/MonoIA.png" style="width:120%;height:auto">
+                  </div>
+                </td>
+                <td style="padding:20px;width:70%;vertical-align:middle">
+                  <papertitle>Towards Intrinsic-Aware Monocular 3D Object Detection
+                  </papertitle>
+                  <br>
+                  <strong>Zhihao Zhang</strong>,
+                  <a href="https://sites.google.com/view/abhinavkumar">Abhinav Kumar</a>,
+                  <a href="https://www.cse.msu.edu/~liuxm/index2.html">Xiaoming Liu</a>
+                  <br>
+                  <em> CVPR 2026</em>
+                  <br>
+                  <a href="https://alanzhangcs.github.io/">Project Page</a>
+                  /
+                  <a href="https://alanzhangcs.github.io/">Code</a>
+                  /
+                  <a href="https://alanzhangcs.github.io/">Paper</a>
+                </td>
+              </tr>
+              <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
+                <td style="padding:20px;width:30%;vertical-align:middle">
                   <div class="one"><img src="images/monocop.png" style="width:120%;height:auto">
                   </div>
                 </td>
-                <td style="padding:20px;width:75%;vertical-align:middle">
+                <td style="padding:20px;width:70%;vertical-align:middle">
                   <papertitle>Unleashing the Power of Chain-of-Prediction for Monocular 3D Object Detection
                   </papertitle>
                   <br>
@@ -128,11 +149,11 @@
                 </td>
               </tr>
               <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
-                <td style="padding:20px;width:25%;vertical-align:middle">
+                <td style="padding:20px;width:30%;vertical-align:middle">
                   <div class="one"><img src="images/charm3r.png" style="width:120%;height:auto">
                   </div>
                 </td>
-                <td style="padding:20px;width:75%;vertical-align:middle">
+                <td style="padding:20px;width:70%;vertical-align:middle">
                   <papertitle>CHARM3R: Towards Unseen Camera Height Robust Monocular 3D Detector
                   </papertitle>
                   <br>
@@ -156,11 +177,11 @@
 
 
               <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
-                <td style="padding:20px;width:25%;vertical-align:middle">
+                <td style="padding:20px;width:30%;vertical-align:middle">
                   <div class="one"><img src="images/tamm.png" style="width:120%;height:auto">
                   </div>
                 </td>
-                <td style="padding:20px;width:75%;vertical-align:middle">
+                <td style="padding:20px;width:70%;vertical-align:middle">
                   <papertitle>TAMM: TriAdapter Multi-Modal Learning for 3D Shape Understanding
                   </papertitle>
                   <br>
@@ -183,11 +204,11 @@
 
 
               <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
-                <td style="padding:20px;width:25%;vertical-align:middle">
+                <td style="padding:20px;width:30%;vertical-align:middle">
                   <div class="one"><img src="images/mftr.png" style="width:120%;height:auto">
                   </div>
                 </td>
-                <td style="padding:20px;width:75%;vertical-align:middle">
+                <td style="padding:20px;width:70%;vertical-align:middle">
                   <papertitle>Tile Classification Based Viewport Prediction with Multi-modal Fusion Transformer
                   </papertitle>
                   <br>
@@ -206,7 +227,7 @@
 
               <tr>
                 <td colspan="2" style="padding:20px; text-align:center;">
-                  <span style="color:#64748b; font-size:15px; font-style:italic;">(* means equal contribution)</span>
+                  <span style="color:#64748b; font-size:18px; font-style:italic;">(* means equal contribution)</span>
                 </td>
               </tr>
 
